# dom-tokenizers

./: .flake8  MANIFEST.in  README.md  camel-details.tsv  dump-token-contexts.py  label-camel-overrides.py  not-found-tokens  pyproject.toml  soup.py  token-contexts.csv
.github/workflows/: ci-pipeline.yml  publish-to-pypi.yml
src/dom_tokenizers/: __init__.py  base64_labels.py  base64_skew.py  base64_words.py  diff.py  dump.py  label_base64.py  profile.py  refine_webui_tokens.py  tokenizers.py  train.py
src/dom_tokenizers/internal/: base64.py  json.py  jsonl.py  transformers.py
src/dom_tokenizers/pre_tokenizers/: __init__.py  base64.py  compat_itertools.py  dom_snapshot.py  html.py  pre_tokenizer.py  sniffer.py  splitter.py  token_buffer.py
src/dom_tokenizers/scripts/: defaults.py  diff.py  dump.py  dump_breaking_inputs.py  profile.py
tests/: conftest.py  test_base64_misses.py  test_lorem_ipsum.py  test_scripts.py  test_splitter.py  test_tokenization.py  test_train_tokenizer.py  test_word2vec.py  util.py
tests/pre_tokenizers/dom_snapshot/: conftest.py  test_base64_misses.py  test_pre_tokenizer.py
tests/resources/: 1655961866939.json  raw-browser-response.html  raw-browser-response.json  svg-in-base64.html  svg-in-base64.json  wordpress-readme.json  xhtml-1.0.html  xhtml-1.0.json
tests/resources/base64-misses/: 1655961866939.json
